--- a/lab7+lab8/giaodien.html
+++ b/lab7+lab8/giaodien.html
@@ -196,18 +196,17 @@
       
           <div class="col-md-3 mb-3">
             <h5>Liên hệ</h5>
-            <ul class="nav flex-column">
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Tòa nhà FPT Polytechnic, phố Trịnh Văn Bô, phường Phương Canh, quận Nam Từ Liêm, TP Hà Nội</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">caodang@fpt.edu.vn</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">0981 725 836</a></li>
-              <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">024 6327 6402</a></li>
-            </ul>
+            <i class="bi bi-house-add"></i> Tòa nhà FPT Polytechnic, Phố Trịnh Văn Bô, phường Phương Canh, Quận Nam Từ Liêm, thành phố Hà Nội</p>
+                    <p><i class="bi bi-envelope"></i> caodang@fpt.edu.vn</p>
+                    <p><i class="bi bi-phone"></i> 0981 725 836</p>
+                    <p><i class="bi bi-printer"></i> 024 6327 6402</p>
+
           </div>
         </footer>
     </div>
     <div class="container-fluid container3">
         <footer class="py-3 my-4">
-          <p class="text-center text-body-white Copyright" style="color:white;">© 2023 Copyright: hungnmph35710</p>
+          <p class="text-center text-body-white Copyright" style="color:white;">© 2023 Copyright: <strong><ins>hungnmph35710</ins></strong> </p>
         </footer>
       </div>
 
